# snyksh

./: Dockerfile  README.md  pyproject.toml  snyksh.py
