[tool.poetry]
name = "snyksh"
version = "0.1.0"
description = "An interactive shell interface for the Snyk API"
authors = ["Gareth Rushgrove <gareth@morethanseven.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pysnyk = "*"
termcolor = "*"
ipython = "*"
prettyprinter = "*"

[tool.poetry.scripts]
snyksh = 'snyksh:run'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
